# recommend-app

./: .env_docker_example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  env_example.txt  mkdocs.yml  pyproject.toml
docs/: index.md  modules.md  reference.md
recommend_app/: __init__.py  __main__.py  exceptions.py  foo.py
recommend_app/api/: __init__.py  app.py  auth.py  constants.py  dependencies.py  exceptions.py  main.py  models.py
recommend_app/api/routers/: auth.py  boards.py  cards.py  extension.py  internal.py  me.py  scrapper.py  session.py  users.py
recommend_app/db/: __init__.py  abstracts.py  client.py  constants.py  exceptions.py  hashing.py  recommendDB.py  typealiases.py  types.py
recommend_app/db/abstracts/: __init__.py  abstract_db.py  abstract_model.py
recommend_app/db/collections/: users.py
recommend_app/db/impl/: __init__.py  db.py
recommend_app/db/impl/documents/: __init__.py  base.py  board.py  card.py  user.py
recommend_app/db/models/: __init__.py  bases.py  board.py  card.py  user.py
recommend_app/db_async_impl/: __init__.py  abstract_collection.py  constants.py  db.py
recommend_app/db_async_impl/collections/: __init__.py  users.py
recommend_app/db_client/: __init__.py  abstract_db.py  client.py  exceptions.py  model.py
recommend_app/db_client/abstracts/: __init__.py  abstract_db.py  abstract_model.py
recommend_app/db_client/models/: __init__.py  board.py  card.py  constants.py  user.py
recommend_app/db_impl/: __init__.py  abstract_collection.py  constants.py  db.py
recommend_app/db_impl/collections/: __init__.py  boards.py  cards.py  constants.py  users.py
recommend_app/schema/: __init__.py  card.py
recommend_app/scrapper/: __init__.py  scrapper.py  using_requests.py
recommend_app/ui/: __init__.py
recommend_app/ui/static/js/: recommend.js
recommend_app/ui/templates/: board.html  boardForm.html  card.html  cardForm.html  health.html  landing.html  layout.html  login.html  navbar.html  register.html  user.html
tests/: conftest.py  test_foo.py  utils.py
tests/api/: conftest.py  test_auth.py  test_boards.py  test_extension.py  test_health.py  test_scrapper.py  test_session.py  test_users.py
tests/api/boards/: test_add_board.py  test_delete_board.py  test_get_board.py  test_update_board.py
tests/api/cards/: test_add_card.py  test_delete_card.py  test_get_card.py  test_update_card.py
tests/api/users/: test_add_user.py  test_get_user.py  test_update_user.py
tests/apitest/: test_main.py
tests/async_db/: conftest.py  test_db_connection.py
tests/db/: conftest.py  test_board_crud.py  test_card_crud.py  test_db_connection.py  test_user.py  test_user_crud.py  test_users.py
tests/db/collections/: test_boards.py  test_cards.py  test_users.py
tests/db/impl/: test_doc_model_mapper.py
tests/db/models/: test_board.py  test_board_model.py  test_card.py  test_card_model.py  test_models.py  test_user.py  test_user_model.py
tests/models/: test_card.py  test_models.py
tests/schema/: test_card.py
tests/scrapper/: test_from_url.py  test_scrapper.py  test_url_validation.py
tests/scrapper/resources/: disney.html  dplus.html  netflix.html  netflix_og.html  prime.html
