[tool.poetry]
name = "recommend_app"
version = "0.1.0"
description = "An app to recommend things."
authors = ["Praveen Ilangovan <praveen.ilangovan@gmail.com>"]
repository = "https://github.com/praveen-ilangovan/recommend-app"
documentation = "https://praveen-ilangovan.github.io/recommend-app/"
readme = "README.md"
packages = [
  {include = "recommend_app"}
]

[tool.poetry.dependencies]
python = "^3.12"
pymongo = {extras = ["srv"], version = "^4.8.0"}
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.1"
deptry = "^0.19.1"
pre-commit = "^3.8.0"
pytest-dotenv = "^0.5.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}

[tool.deptry.per_rule_ignores]
DEP002 = ["pytest-dotenv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
